force-app/main/default/objects/Dealer_with_Tehsil__c/Dealer_with_Tehsil__c.object-meta.xml
<CustomObject>
    <label>Dealer with Tehsil</label>
    <nameField>
        <label>Dealer with Tehsils Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer with Tehsils</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>