force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Dealer__r.Active__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>