force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Cluster_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Sales_Manager__c</fullName>
    <formula>Dealer__r.Cluster_Sales_Manager__c</formula>
    <label>Cluster Sales Manager</label>
    <type>Text</type>
</CustomField>