force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Dealer__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Dealer with Tehsils</relationshipLabel>
    <relationshipName>Dealer_with_Tehsils</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>