force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Dealer_Last_Three_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Last_Three_Month_Target__c</fullName>
    <formula>Tehsil_Name__r.Last_Three_Month_Target__c / Tehsil_Name__r.Dealer_Associate_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Last Three Month Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>