force-app/main/default/objects/Dealer_with_Tehsil__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Tehsil_Name__r.District__r.Name</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>