force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Dealer__r.Employee_Names__r.Name</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>