force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Month_Area_Potentials__c.field-meta.xml
<CustomField>
    <fullName>Month_Area_Potentials__c</fullName>
    <formula>IF( Tehsil_Name__r.Month_Number__c = 1, Tehsil_Name__r.January_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 2, Tehsil_Name__r.February_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 3,Tehsil_Name__r.March_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 4,Tehsil_Name__r.April_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 5,Tehsil_Name__r.May_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 6, Tehsil_Name__r.June_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 7, Tehsil_Name__r.July_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 8, Tehsil_Name__r.August_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 9, Tehsil_Name__r.September_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 10, Tehsil_Name__r.October_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 11, Tehsil_Name__r.November_Area_Potential__c,
IF(Tehsil_Name__r.Month_Number__c = 12, Tehsil_Name__r.December_Area_Potential__c, 0) ) ) ) ) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Area Potentials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>