force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Previous_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Achievement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Month Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>