force-app/main/default/objects/Dealer_with_Tehsil__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Tehsil_Name__r.State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>