force-app/main/default/objects/Dealer_with_Tehsil__c/fields/Tehsil_Name__c.field-meta.xml
<CustomField>
    <fullName>Tehsil_Name__c</fullName>
    <label>Tehsil Name</label>
    <referenceTo>Tehsil__c</referenceTo>
    <relationshipLabel>Dealer with Tehsils</relationshipLabel>
    <relationshipName>Dealer_with_Tehsils</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>