force-app/main/default/objects/Dealer_with_Tehsil__c/fields/This_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Achievement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Month Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>